	so that svn-export can specify '.'.
	* Master/deb.make: Switched to use of TARBALL_VERSION as the
	definitive version string in tarball name.
	Added debclean target.
	User now has to explicitly make a choice how the dist tarball
	will be produced.
	Depending on the method, tarball may be placed in the current
	or parent directory, so we detect that (and prefer the current
	directory).
	* bake_debian_files: Now defaulting to target_arch=any so that
	the package gets built on all platforms when uploaded on Launchpad,
	instead of detecting an arch from gnustep-make and burning that
	arch into the source package.
	Added support for TARBALL_VERSION.
	Fixed a 'command not found' error.

2014-05-05  Ivan Vucica <ivan@vucica.net>

	* GNUmakefile.in: Separately building source and binary package,
	optionally signing. Support for gnustep-make-ld.so.conf.
	* Master/deb.make: Tweaked procedure for building Debian packages
	to avoid cleaning when attempting to get 'make' variables that can
	be passed on to bake_debian_files.sh as environment variables.
	Signing packages is now optional, and source and binary packages
	are built separately.
	* bake_debian.files.sh: Improved .spec parsing. Introduced
	dependency on CDBS (which simplifies customizing of debian/rules)
	while automating some edge cases. Handling of DEB_VERSION_SUFFIX.
	* configure, configure.ac: Support for --enable-install-ld-so-conf.
	* gnustep-make-ld.so.conf.in: Template for the dynamic linker
	configuration file ld.so.conf/gnustep-make.conf.

2014-04-07  Ivan Vucica <ivan@vucica.net>

	* Master/deb.make, bake_debian_files.sh: Rewrite of .deb-building
	system that will produce both a source package and a binary package.
	Work in progress; currently only gnustep-make itself builds correctly.
	* GNUmakefile.in: Added the svn-export target which uses local files
	to do the equivalent of 'make dist'. Switched to new way of building
	.deb using bake_debian_files.sh.